--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -229,11 +229,11 @@
         "    \"cat\": np.array([0, 1, 0, 0, 0.1, 0.2, 0.3, 0.4]),\n",
         "    \"sits\": np.array([0, 0.9, 1, 0, 0.2, 0.1, 0.4, 0.3]),\n",
         "    \"on\": np.array([0, 0, 0, 1, 0, 0, 0, 0]),\n",
-        "    \"mat\": np.array([0, 0.7, 0.2, 0.3, 0, 1, 0, 0]),\n",
+        "    \"mat\": np.array([0, 0.8, 0.6, 0.3, 0, 0.6, 0.3, 0.2]),\n",
         "    \"a\": np.array([1, 0, 0, 0, 0, 0, 0, 0.1]),\n",
-        "    \"dog\": np.array([0, 0.9, 0.1, 0, 0.2, 0.3, 0.4, 0]),\n",
-        "    \"lies\": np.array([0, 1, 0.8, 0.2, 0.3, 0.1, 0.4, 0]),\n",
-        "    \"rug\": np.array([0, 0.9, 0.3, 0.4, 0, 0.9, 0.1, 0])\n",
+        "    \"dog\": np.array([0, 0.9, 0.1, 0, 0, 0.3, 0.4, 0.3]),\n",
+        "    \"lies\": np.array([0, 1, 0.8, 0.1, 0.3, 0.1, 0.4, 0.2]),\n",
+        "    \"rug\": np.array([0, 0.9, 0.6, 0.3, 0, 0.5, 0.3, 0.1])\n",
         "}\n",
         "\n",
         "# Tokenize the sentences\n",
@@ -267,9 +267,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dtpSM0RCONlN",
-        "outputId": "6af3be6c-5da3-4002-e806-9e036204e1a2"
+        "outputId": "6badb7d5-1840-4623-b72c-665919ecc82c"
       },
-      "execution_count": 35,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,18 +277,18 @@
           "text": [
             "Attention weights for the first sentence:\n",
             "[[0.20795408 0.14602296 0.14602296 0.14602296 0.20795408 0.14602296]\n",
-            " [0.13376468 0.21181252 0.20301404 0.13376468 0.13376468 0.18387941]\n",
-            " [0.12475757 0.18934399 0.26305682 0.12475757 0.12475757 0.17332649]\n",
+            " [0.1320772  0.20914044 0.20045296 0.1320772  0.1320772  0.194175  ]\n",
+            " [0.11958619 0.18149541 0.25215275 0.11958619 0.11958619 0.20759326]\n",
             " [0.15299844 0.15299844 0.15299844 0.21788799 0.15299844 0.17011824]\n",
             " [0.20795408 0.14602296 0.14602296 0.14602296 0.20795408 0.14602296]\n",
-            " [0.13073607 0.17971615 0.18163247 0.14536482 0.13073607 0.23181441]]\n",
+            " [0.12397355 0.18226132 0.21520941 0.13784561 0.12397355 0.21673656]]\n",
             "Attention weights for the second sentence:\n",
-            "[[0.20853701 0.14591549 0.14591549 0.14591549 0.20780103 0.14591549]\n",
-            " [0.13285432 0.19670349 0.20522848 0.13285432 0.13285432 0.19950506]\n",
-            " [0.12172423 0.18803512 0.24168897 0.13064304 0.12172423 0.19618442]\n",
-            " [0.15039178 0.15039178 0.16141108 0.21417579 0.15039178 0.17323778]\n",
+            "[[0.20789086 0.14701445 0.1464956  0.14546337 0.20715715 0.14597857]\n",
+            " [0.13342497 0.19895022 0.20393542 0.13201726 0.13201726 0.19965486]\n",
+            " [0.12073931 0.18519945 0.23888728 0.12420309 0.11988857 0.2110823 ]\n",
+            " [0.15216063 0.15216063 0.15763656 0.21669485 0.15216063 0.16918669]\n",
             " [0.20795408 0.14602296 0.14602296 0.14602296 0.20795408 0.14602296]\n",
-            " [0.12181493 0.1829274  0.19633061 0.14031983 0.12181493 0.23679229]]\n"
+            " [0.12305363 0.18544201 0.21589025 0.13633987 0.12261934 0.21665489]]\n"
           ]
         }
       ]
@@ -296,10 +296,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Please"
+        "**For the first sentence \"The cat sits on the mat\":**\n",
+        "\n",
+        "1. The attention weights for the word \"the\" (first row) seem to be distributed across \"the\", \"sits\", and \"mat\" with higher weights (0.2079) compared to \"cat\" and \"on\" (0.1460). This might indicate that the model perceives a stronger association between \"the\" and the action (\"sits\") and the object (\"mat\") of the sentence.\n",
+        "\n",
+        "2. The word \"cat\" (second row) has the highest attention weight when paired with itself (0.2091) and with \"sits\" (0.2004), which could suggest that the model identifies \"cat\" and the action it's performing as key components of the sentence.\n",
+        "\n",
+        "3. The word, \"sits\" (third row) has the highest attention weight in combination with itself (0.2521) and substantial weight with \"cat\" (0.1814), potentially indicating the model's understanding of the importance of the verb in the context of the subject.\n",
+        "\n",
+        "4. Finally, \"mat\" (sixth row) pays more attention to \"sits\" (0.2152) as expected.\n",
+        "\n",
+        "**For the second sentence \"A dog lies on the rug\":**\n",
+        "\n",
+        "1. \"Dog\" (second row) shows higher attention weights for itself (0.1989) and \"lies\" (0.2039), which is consistent with recognizing the subject and verb relationship.\n",
+        "\n",
+        "3. \"Lies\" (third row) has the highest weight with itself (0.2388), and a notable weight with \"dog\" (0.1851) and \"rug\" (0.2110), reinforcing the connection between the subject, object and the action.\n",
+        "\n",
+        "4. \"Rug\" (sixth row), much like \"mat\" in the first sentence, shows a relatively high weight for \"dog\" (0.1854) and \"lies\" (0.2158), as expected.\n",
+        "\n",
+        "In both sentences, it is evident that the attention mechanism is picking up on the grammatical structure and the relationships between subjects, verbs, and objects. It emphasizes self-attention and relationships that make sense in the context of the sentences."
       ],
       "metadata": {
-        "id": "lhndb0akjZQV"
+        "id": "WMqkHgDnGWI_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Last but not least, the analysis provided above is for teaching purposes and simplifies many aspects of how attention mechanisms operate in actual NLP models.\n",
+        "\n",
+        "- In a typical machine learning application, word embeddings are learned from a large corpus of text rather than being hard-coded as they are here. These learned embeddings capture a rich semantic space that allows models to discern nuanced relationships between words based on their usage in context.\n",
+        "\n",
+        "- Moreover, in this illustrative example, the matrices for Queries (Q), Keys (K), and Values (V) are not only identical but also untrained. In real transformer models, these matrices are generated through learned linear transformations of the input embeddings, allowing the model to adaptively determine the relevance of different words in a sentence for a given task.\n",
+        "\n",
+        "- Lastly, the insights drawn from the attention weights in this example are based on a small, static dataset—just two sentences—which is insufficient for a model to learn meaningful patterns in language. In practice, transformers are trained on vast and diverse datasets, enabling them to develop a sophisticated understanding of language that is reflected in the attention patterns they learn."
+      ],
+      "metadata": {
+        "id": "wyFZjeSVIXo_"
       }
     },
     {
@@ -309,6 +342,13 @@
       ],
       "metadata": {
         "id": "LVVPdFp4OWjH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "u4OCmlZmESFN"
       }
     },
     {
