decoding algorithms  updated

--- a/Decoding Algorithms/decoding_algorithms.ipynb
+++ b/Decoding Algorithms/decoding_algorithms.ipynb
@@ -508,21 +508,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Mathematical Foundation:** Pure Sampling involves randomly selecting a word based on its probability distribution at each step, without any regard for the probabilities of subsequent words. It is a non-deterministic approach and can introduce more diversity and novelty into the generated sequences.\n",
+    "Pure sampling can be represented as choosing the next word $y_t$ at each timestep $t$ based on the probability distribution:\n",
     "\n",
-    "**Code Implementation:**\n",
-    "```python\n",
-    "def pure_sampling_decoder(model, input, start_token, end_token, max_length):\n",
-    "    output_sequence = [start_token]\n",
-    "    for _ in range(max_length):\n",
-    "        output = model(input, torch.tensor(output_sequence).unsqueeze(0))\n",
-    "        probabilities = torch.softmax(output[:, -1], dim=-1)\n",
-    "        next_word = torch.multinomial(probabilities, 1).item()\n",
-    "        output_sequence.append(next_word)\n",
-    "        if next_word == end_token:\n",
-    "            break\n",
-    "    return output_sequence\n",
-    "```\n"
+    "$$\n",
+    "P(y_t | y_{1:t-1}, X)\n",
+    "$$\n",
+    "\n",
+    "provided by the model, where:\n",
+    "- $y_t$ is the word selected at time $t$.\n",
+    "- $X$ is the input to the decoder.\n",
+    "- $y_{1:t-1}$ are the words selected in previous steps.\n",
+    "\n",
+    "The key distinction from greedy decoding is that pure sampling takes into account the full distribution for the next word selection, rather than simply picking the most likely word."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pure Sampling Decoding: A Conceptual Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a step-by-step example of how pure sampling might run:\n",
+    "\n",
+    "1. **Initialization**: Start with the start token `<s>` as the initial sequence.\n",
+    "\n",
+    "2. **Step 1**: Generate all possible next words from `<s>` along with their probabilities. Instead of selecting the highest probability word, we **sample** a word based on the probability distribution. Suppose the distribution slightly favors \"I\", but \"The\" is also a strong contender; we might end up with either `<s> I` or `<s> The` based on the randomness of the sampling.\n",
+    "\n",
+    "3. **Step 2**: For the selected sequence, generate all possible continuations and their probabilities. Again, **sample** the next word based on this distribution. The process introduces variability, as even less probable words have a chance of being selected.\n",
+    "\n",
+    "4. **Continue**: This process repeats, with each step introducing potential for diverse continuations based on the probability distribution of the next word.\n",
+    "\n",
+    "5. **Termination**: The sequence generation concludes when an end token `</s>` is sampled or the maximum sequence length is reached. Due to the stochastic nature of pure sampling, different runs will produce different sequences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pure Sampling Decoding: Simple Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated sequence with pure sampling decoding: <s> the cat sat on cat the best dessert </s>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "max_length = 10\n",
+    "\n",
+    "def pure_sampling_decoder(model):\n",
+    "    \"\"\"\n",
+    "    Generate a sequence of words using a pure sampling decoding strategy.\n",
+    "\n",
+    "    Args:\n",
+    "    - model (nn.Module): The trained model for generating sequences.\n",
+    "\n",
+    "    Returns:\n",
+    "    - List[str]: The generated sequence of words.\n",
+    "    \"\"\"\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
+    "    input_word = torch.tensor([start_token], dtype=torch.long)\n",
+    "    generated_sequence = [start_token]\n",
+    "    \n",
+    "    for _ in range(max_length - 1):\n",
+    "        with torch.no_grad():  # No need to track gradients\n",
+    "            output_logits = model(input_word.unsqueeze(0))  # Add batch dimension\n",
+    "            probabilities = F.softmax(output_logits, dim=-1).squeeze()  # Ensure probabilities is 1D or 2D\n",
+    "\n",
+    "            # Check if probabilities is 2D (batched) and select the first (and only) batch\n",
+    "            if probabilities.dim() > 1:\n",
+    "                probabilities = probabilities[0]\n",
+    "            \n",
+    "            next_word = torch.multinomial(probabilities, 1).item()  # Sample based on probabilities\n",
+    "            generated_sequence.append(next_word)\n",
+    "        \n",
+    "            if next_word == end_token:\n",
+    "                break\n",
+    "        \n",
+    "            input_word = torch.tensor([next_word], dtype=torch.long)\n",
+    "    \n",
+    "    # Convert indices to words using the inverse vocabulary\n",
+    "    generated_words = [inv_vocab[idx] for idx in generated_sequence if idx in inv_vocab]\n",
+    "    \n",
+    "    return generated_words\n",
+    "\n",
+    "generated_sequence = pure_sampling_decoder(model)\n",
+    "print(\"Generated sequence with pure sampling decoding:\", ' '.join(generated_sequence))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Insights from Pure Sampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output from the pure sampling decoder, \"`<s> the cat sat on cat the best dessert </s>`\", provides a valuable demonstration of pure sampling's characteristics and its implications for text generation. Here are several insights drawn from this output regarding pure sampling decoding:\n",
+    "\n",
+    "1. **Diversity and Unpredictability**: The output sequence showcases the inherent diversity and unpredictability of pure sampling. Unlike greedy decoding, which would likely produce the same sequence given the same starting conditions, pure sampling can generate a wide variety of sequences due to its stochastic nature. This is evident from the unexpected repetition of \"cat\" and the seemingly unrelated conclusion \"the best dessert\".\n",
+    "\n",
+    "2. **Creative and Novel Outputs**: Pure sampling has the potential to generate more creative and novel outputs by exploring less probable paths that might be overlooked by deterministic approaches. This can lead to interesting and sometimes surprising sequences, as seen with the inclusion of \"dessert\" in a sequence starting with \"the cat\".\n",
+    "\n",
+    "3. **Potential for Reduced Coherence**: While pure sampling introduces diversity, it also risks producing sequences with reduced coherence or logical flow. The sequence \"`<s> the cat sat on cat the best dessert </s>`\" might be grammatically correct but lacks a clear, coherent narrative, highlighting the trade-off between creativity and coherence.\n",
+    "\n",
+    "4. **Balance Between Exploration and Exploitation**: Pure sampling represents a shift towards exploration in the exploration-exploitation trade-off, potentially at the expense of exploiting more probable (and possibly more coherent) sequences. This approach is beneficial for generating diverse content but requires careful consideration of the application's needs regarding coherence and predictability.\n",
+    "\n",
+    "5. **Application-Specific Suitability**: The suitability of pure sampling depends heavily on the specific application. For tasks requiring high creativity and diversity, such as story generation or ideation, pure sampling can be advantageous. For tasks requiring high precision and coherence, such as formal text generation, modifications or alternative strategies might be necessary.\n",
+    "\n",
+    "6. **Impact of the Model's Training**: The effectiveness and coherence of the sequences generated by pure sampling are also influenced by the underlying model's training. A well-trained model on a comprehensive and diverse dataset can produce more meaningful and contextually appropriate sequences even under pure sampling, as it learns robust representations of language patterns."
    ]
   },
   {
